# physics_code

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  OneRing.py  README.md  inputFiles  job.sh  outputFiles  test.py
511-lab/: 511_lab.cpp  (+4 more)
current/: .atom-build.yml  Apple.mk  CMakeLists.txt  Delta_t.cpp  MacE1d  Makefile  TestingApple.mk  WvsQ2.hpp  WvsQ2_hists.hpp  bad.h  branches.cpp  branches.hpp  cc_cut.hpp  cc_hist.hpp  classes.hpp  color.cpp  constants.h  current.sublime-project  current.sublime-workspace  cuts.cpp  cuts.hpp  datahandeler.h  datahandeler.hpp  datahandeler2.h  delta_t.cpp  delta_t.hpp  delta_t_cut.hpp  delta_t_hist.hpp  delta_time.hpp  e1d  e1d_py  ec_cut.hpp  ec_hist.bck  ec_hist.hpp  extra_hists.hpp  fid_hists.hpp  get_yeilds.py  golden_run.h  histo.h  histo2.h  (+18 more)
current/511-lab/: 511_lab.cpp  511_lab.hpp  Makefile  convert_data_to_root.C  main.h  make_data.py
current/511-lab/Lab2/: run.C
current/511-lab/Lab3/: analyze.C
current/Classes/: cuts.hpp  datahandeler.h  delta_t.cpp  delta_t.hpp  delta_t_cut.hpp  delta_time.hpp  e1d  main.cpp  main.h  missing_mass.hpp  missing_mass_hists.hpp  momentum_hists.hpp  test.mk
current/R_learning/: Large_data.R  sim_train.R  tensor_flow_example.R
current/binned/: main.h  main_binned.cpp
current/cpp/: SConstruct  analysis.cpp  datahandeler.hpp  datahandeler_old.hpp  e1d  e1d.cpp  e1f.cpp  inputFiles  main.cpp  main.h  main_cpp.cpp  makefile  outputFiles
current/crossSection/: CrossSectionsMine3.ipynb  Untitled.ipynb  cross sections 2.ipynb  cross sections.ipynb  cross_section.txt
current/csv_maker/: Makefile  csv_maker.cpp  csv_maker.hpp  csv_maker_mc.cpp  main.h
current/cython/: branches.cpp  branches.hpp  constants.hpp  delta_t.cpp  delta_t.hpp  h10.cpp  h10.pyx  physics.cpp  physics.pyx  setup.py  test.py
current/deltaTFitter/: DtFitter.ipynb  FidFitter.ipynb  SpeedUp.ipynb  deltaTFitter.cpp
current/fitting/: fitting.py
current/golden_run/: GR_graph.py  SConstruct  golden_run.R  golden_run.cpp  golden_run.hpp  main.cpp  main.h  main_gr.cpp  makefile
current/h10Test/: h10.C  h10.h  testChain.C
current/maid_xsection/: CMakeLists.txt  INSTALL.txt  Makefile  Makefile.bck  README.txt  TODO  born.F  bornterms.inc  daspe_ini_point.F  daspe_rephi.F  delta_dat.inc  dsigma.F  ettapar.inc  example.cc  fint.F  fit_par.inc  gamma.F  gamma64.F  gammf.F  gammf64.F  gpar.inc  imphi.inc  maid.F  maid.h  maid_csv.cpp  maid_lee.F  maid_xsection.F  maidinterface.cc  mpintp.inc  mtlprt.F  multipoles.inc  read_sf_file.F  resonances.inc  test.inp
current/maid_xsection/example/: Makefile  example.cc
current/maid_xsection/src/: lenocc.F  maid_lee.F  pepsi423.F  xsection.F
current/momentumCorrections/: MomentumCorr.ipynb  MomentumCorrKPark.ipynb  mom_corr.py  momemtumCorrections.cpp  momemtumCorrections.hpp
current/monteCarlo/: e1d_mc.cpp  e1f_mc.cpp  main.h  main_mc.cpp  rootlogon.C  run.C  sim.cxx  sim.hh
current/ntuple_maker/: main.h  ntuple_maker.cpp  ntuple_maker.hpp  ntuple_reader.ipynb
current/old/: WvsQ2_test.hpp  count_after_cut.h  datahandeler3.h  physics_test.hpp  stupid.h
current/peakFitMomCorr/: peakFitMomCorr.cpp  peakFitMomCorr.hpp
current/pictures/: Makefile  pic  pictures.cpp
current/postgreSQL/: H10.h  fill_db.py  fill_db_mongo.py  fill_db_pg.py  fill_db_pg_alchemy.py  fill_db_tinydb.py  makefile  map_reduce.js
current/proof/: MyProof.C  MyProof.h  MySelector.cxx  MySelector.h  MySelector.hh  run.C
current/pyskim/: skim.hpp
current/pyskim/cmake/: UseCython.cmake  cmake_install.cmake
current/python/: H10.h  Physics.h  constants.h  constants.py  datahandler.ipynb  datahandler.py  h10_ana.py  histogram.py  main.py  makefile  physics.hpp  physics.py  test.py
current/python/.ipynb_checkpoints/: datahandler-checkpoint.ipynb
current/python/reaction/: __init__.py
current/python/src/: branches.hpp
current/python_bck/: H10.C  datahandler.py  physics.py
current/python_test/: datahandler.py  main.py  makefile  physics.hpp
current/rdst_test/: analyze.C
current/scripts/: DT_show.cxx  LotsOfHists.cxx  W_Q2.C  WvsMM.C  acc_corr.cxx  acc_corrected.cxx  dt_can.cxx  fid_canvas.cxx  fit_EC.cxx  kinematics.cxx  mc_vs_data_plots.cxx  theta_phi.C
current/simulation/: sim-maid_gary.sh
current/simulations/: aao_norad.inp  aao_rad.inp  aao_rad.test  aao_rad_pi0.inp  bos_to_root.sh  clean.sh  do_sim.sh  do_user_ana.sh  docker_sim.sh  e1d_user_ana.tcl  gpp.inp  gsim.inp  sim.sh  sim.submit  sim_jlab.sh  sim_multi.py  sim_osg.sh  slurm_clas6_sim_USC.sh  slurm_clas6_sim_jlab.sh  user_ana.py  user_ana.tcl  user_ana_usc.tcl
current/skim/: CMakeLists.txt  Makefile  Multicore_skim.py  SConstruct  Skim  color.hpp.bck  data  e1d_skim.cpp  e1f_skim.cpp  fit_functions.hpp  fit_functions.hpp.bck  fit_functions_auto.hpp  main.cpp  main.h  main_skim.cpp  missing_mass.hpp  skim.bck  skim.cpp  skim.hpp  skim.py  skim.pyx  test.mk
current/src/: CMakeLists.txt  Makefile  Particle.cpp  Particle.hpp  branches.cpp  branches.hpp  classes.hpp  color.cpp  color.hpp  constants.h  constants.hpp  cuts.cpp  cuts.hpp  datahandeler.cpp  datahandeler.hpp  datahandeler_mc.cpp  datahandeler_mc.hpp  datahandeler_multi.cpp  datahandeler_multi.hpp  delta_t.cpp  delta_t.hpp  event.cpp  event.hpp  fid_cuts.f  fid_cuts.hpp  fit_functions.bck  fit_functions.hpp  fits.cpp  fits.hpp  func.cpp  func.hpp  glob_files.cpp  glob_files.hpp  h10.html  h10.pyx  handeler.pyx  histogram.cpp  histogram.hpp  histogram_mc.cpp  histogram_mc.hpp  (+23 more)
current/stuff/: WvsQ2_hists.hpp  current.sublime-project  delta_t_cut.hpp  delta_t_hist_cpp  inputFiles  outputFiles
current/tests/: Cuts.h  Delta_T.h  H10.h  Histogram.h  MissingMass.h  makefile
src/: CMakeLists.txt  MomCorr.pyx  branches.cpp  cuts.cpp  datahandeler.cpp  delta_t.cpp  fid_cuts.f  fit_functions.pyx  fits.cpp  func.cpp  h10.pyx  histogram.cpp  makeHeader.cpp  missing_mass.cpp  mom_corr.cpp  ntuple.cpp  photon_flux.cpp  physics.cpp  physics_vectors.pyx  reaction.cpp  skim.cpp  skim.pyx  syncfile.cpp  vertex_correction.f  yeilds.cpp  yeilds.pyx
(+536 files in other folders)
